Fix DHT peer discovery reliability and add LAN search fallback
  - Increase FIND_VALUE wait from 500ms to 2000ms for mobile networks
  - Add final retry round with 3s wait after iterative lookup exhausts
  - Add LAN peer fallback to Network tab search (matches by discriminator)
  - Re-announce every 60s instead of 5min, plus every 30s via health checker
  - Directly push announcements to LAN peers on discovery
  - Add diagnostic logging to handleFindValue, handleValue, handleAnnounce